data/test/type_check/fail/issue_30b.v
reg r = 1;
wire x[r:0];
